# OrtProxy

./: CMakeLists.txt
impl/: OrtProxy.cpp
include/: OrtProxy.h
